--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,6 @@
         android:layout_height="202dp"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/intro_item_manrun_1"/>
+        android:background="@drawable/man_run"/>
 
 </FrameLayout>
